# LARP_finmath

./: CHANGELOG.md  Cargo.toml  README.md  pyproject.toml
.github/workflows/: CI.yml
benchmarks/: monte_carlo_benchmark.py
examples/: fixed_income_demo.py  options_demo.py  portfolio_demo.py  regression_demo.py  symbolic_demo.py
larp_quantmath/: __init__.py  symbolic.py
src/: lib.rs
tests/: test_advanced_indicators.py  test_backtesting_metrics.py  test_basic.py  test_black_scholes.py  test_fixed_income.py  test_fixed_income_upgrade.py  test_greeks.py  test_implied_volatility.py  test_linear_algebra.py  test_linear_algebra_extension.py  test_monte_carlo.py  test_portfolio_optimization.py  test_portfolio_risk.py  test_professional_risk.py  test_regression_factor_models.py  test_symbolic.py  test_technical_indicators.py  test_time_value.py
